# RaylibCppTemplate

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  imgui.ini
cmake/: CompilerFlags.cmake
html/: CMakeLists.txt  conf.txt  readme.txt
src/: main.cpp
